--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "microevent": "^1.0.0",
     "moment": "2.22.2",
     "node-libs-react-native": "https://github.com/Sotatek-NhuanHoang/node-libs-react-native",
-    "nodejs-mobile-react-native": "0.4.0",
+    "nodejs-mobile-react-native": "^0.4.1",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-country-picker-modal": "^0.6.2",
