--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ethereumjs-util": "5.2.0",
     "ethereumjs-wallet": "0.6.2",
     "ethers": "^4.0.27",
+    "from-exponential": "^1.0.0",
     "google-libphonenumber": "^3.1.15",
     "laravel-echo": "^1.4.0",
     "lodash": "4.17.11",
@@ -57,6 +58,7 @@
     "react-native-qrcode-svg": "5.1.1",
     "react-native-randombytes": "3.5.1",
     "react-native-restart": "0.0.7",
+    "react-native-root-toast": "^3.0.2",
     "react-native-share": "^1.1.2",
     "react-native-spinkit": "^1.2.0",
     "react-native-splash-screen": "^3.1.1",
