--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-native-qrcode-svg": "5.1.1",
     "react-native-randombytes": "3.5.1",
     "react-native-restart": "0.0.7",
-    "react-native-root-toast": "^3.0.2",
+    "react-native-root-toast": "^3.1.1",
     "react-native-share": "^1.1.2",
     "react-native-spinkit": "^1.2.0",
     "react-native-splash-screen": "^3.1.1",
@@ -69,6 +69,7 @@
     "react-navigation": "2.16.0",
     "readable-stream": "3.0.3",
     "redux": "4.0.0",
+    "redux-saga": "^1.0.3",
     "rn-viewpager": "^1.2.9",
     "socket.io-client": "^2.1.1",
     "stream-browserify": "2.0.1",
