--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "react-native-country-picker-modal": "^0.6.2",
     "react-native-device-info": "^0.24.3",
     "react-native-elements": "^0.19.1",
-    "react-native-fbsdk": "0.8.0",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-i18n": "2.0.15",
     "react-native-image-picker": "^0.27.1",
@@ -90,7 +89,8 @@
     "eslint-plugin-react": "^7.11.1",
     "jest": "23.5.0",
     "react-native-dotenv": "0.2.0",
-    "react-test-renderer": "16.4.1"
+    "react-test-renderer": "16.4.1",
+    "reactotron-react-native": "3.6.5"
   },
   "jest": {
     "preset": "react-native"
